--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+*{
+	
+}
+table,tr,td,th{
+	border:1px solid black;
+	border-collapse:collapse;
+	
+	padding-left:42px
+}
